--- a/BTS-BE/appsettings.Development.json
+++ b/BTS-BE/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AppConfiguration": {
     "Environment": "Development",
-    "ConnectionString": "dev con"
+    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BENCHTRACK;Integrated Security=True;Encrypt=False;"
   }
 }
