--- a/BTS.Domain.Core/BTS.Domain.csproj
+++ b/BTS.Domain.Core/BTS.Domain.csproj
@@ -7,16 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Logger\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BTS.Application\BTS.Application.csproj" />
+    <Folder Include="Common\" />
   </ItemGroup>
 
 </Project>
